--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -677,6 +677,12 @@ ul.dropdown-menu > li.active > a:hover, ul.dropdown-menu > li.active > a:focus, 
 .sponsorship {
   padding: 2em;
   background-color: #fff;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
 }
 .sponsorship-title {
   text-align: center;
